[gd_scene load_steps=7 format=3 uid="uid://cn47kwutjxg1w"]

[ext_resource type="Script" path="res://scenes/power/power.gd" id="1_texqd"]
[ext_resource type="AudioStream" uid="uid://c7b8qrlguwjpi" path="res://sfx/Coffee2.ogg" id="2_6xny5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bafvr"]
cull_mode = 2
shading_mode = 0
albedo_color = Color(1, 0.121569, 0.113725, 1)

[sub_resource type="SphereMesh" id="SphereMesh_y046v"]
material = SubResource("StandardMaterial3D_bafvr")

[sub_resource type="SphereShape3D" id="SphereShape3D_aqubo"]
radius = 0.878362

[sub_resource type="SphereShape3D" id="SphereShape3D_g3ocj"]
radius = 6.10493

[node name="Power" type="CharacterBody3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
script = ExtResource("1_texqd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
mesh = SubResource("SphereMesh_y046v")

[node name="Area3D" type="Area3D" parent="MeshInstance3D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Area3D"]
shape = SubResource("SphereShape3D_aqubo")

[node name="AreaPull" type="Area3D" parent="MeshInstance3D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/AreaPull"]
shape = SubResource("SphereShape3D_g3ocj")

[node name="Boop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_6xny5")

[connection signal="body_entered" from="MeshInstance3D/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="MeshInstance3D/AreaPull" to="." method="_on_area_pull_body_entered"]
[connection signal="body_exited" from="MeshInstance3D/AreaPull" to="." method="_on_area_pull_body_exited"]
